[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/powers/pétard/IMG_0385.PNG" type="Texture" id=1]
[ext_resource path="res://assets/sprites/powers/pétard/IMG_0386.PNG" type="Texture" id=2]
[ext_resource path="res://assets/sprites/powers/pétard/IMG_0387.PNG" type="Texture" id=3]
[ext_resource path="res://scene/prefabs/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://script/prefabs/join.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 200.001, 226.469 )

[node name="Join" type="Node2D"]
script = ExtResource( 5 )

[node name="sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.12, 0.12 )
frames = SubResource( 1 )
frame = 3
playing = true

[node name="HitBox" parent="." instance=ExtResource( 4 )]
scale = Vector2( 0.17, 0.17 )
collision_mask = 8

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 8.82352, -35.2941 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="HitBox"]
